--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
