--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "^3.3.2"
   }
 }
