--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "postcss": "8.4.24",
