--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
