--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.12.16",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
+    "html-react-parser": "^4.0.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
