--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.6",
+    "@uidotdev/usehooks": "^2.0.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
