--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
     "react-spring-lightbox": "^1.7.1",
+    "styled-components": "^6.0.0-rc.3",
     "tailwindcss": "^3.3.2"
   }
 }
