--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "react-responsive-masonry": "^2.1.7",
     "react-spring-lightbox": "^1.7.1",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.3.2"
